<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">校园助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="planet_prompt">Choose a planet</string>
    <string name="action_settings">Settings</string>
    <string name="url_server">http://202.119.168.66:8080/test/version.xml</string>
    <string name="home">首页</string>
    <string name="kebiao">课表查询</string>
    <string name="chengji">成绩查询</string>
    <string name="library">图书检索</string>
    <string name="about">关于我们</string>
    <string name="settings">设置</string>
    <string name="perinfo">个人信息</string>
    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>


    <string name="lost">遗失</string>
    <string name="found">招领</string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="list_no_data_lost">暂时还未有失物信息</string>
    <string name="list_no_data_found">暂时还未有招领信息</string>

    <string name="title_hint">标题</string>
    <string name="describe_hint">描述</string>
    <string name="photo_hint">手机</string>

    <string name="progress_loading">正在获取数据..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_yzm">YzmActivity</string>
</resources>
